# CFtldROS

./: .gitignore  AUTHORS  CMakeLists.txt  package.xml
launch/: tiago_tracking.launch
sample/: config-sample.cfg
src/libopentld/: CMakeLists.txt
src/libopentld/imacq/: ImAcq.cpp  ImAcq.h
src/libopentld/tld/: Clustering.h  DetectionResult.h  EnsembleClassifier.cpp  EnsembleClassifier.h  IntegralImage.h  NNClassifier.h  TLD.cpp  TLD.h  TLDUtil.cpp  TLDUtil.h  VarianceFilter.h
src/opentld/: CMakeLists.txt  OpenTLD.cpp
src/opentld/main/: Config.cpp  Config.h  Gui.cpp  Main.cpp  Main.h  Settings.cpp  Settings.h  Trajectory.cpp  Trajectory.h
src/opentld/main/ros/: ros_grabber.cpp  ros_grabber.hpp  ros_grabber_depth.cpp  ros_grabber_depth.hpp
